base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"httpd-ex:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"httpd-ex\")].image"}]'
  labels:
    app: httpd-ex
    app.kubernetes.io/component: httpd-ex
    app.kubernetes.io/instance: httpd-ex
  name: httpd-ex
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: httpd-ex
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
      creationTimestamp: null
      labels:
        deployment: httpd-ex
    spec:
      containers:
      - image: <PATCH_ME>
        imagePullPolicy: IfNotPresent
        name: httpd-ex
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
